# gunbot-quant

./: .gitignore  LICENSE  README.md  combined_code_for_llms.md  package.json  pyproject.toml  run.py
gunbot_quant/: main_executor.py
gunbot_quant/api/: main.py  models.py  routes.py
gunbot_quant/cli/: main.py
gunbot_quant/config/: scenarios.py
gunbot_quant/core/: backtest_engine.py  data_manager.py  engine_runner.py  indicators.py  screener.py  utils.py
gunbot_quant/frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.js
gunbot_quant/frontend/src/: App.jsx  Backtester.jsx  Dashboard.jsx  DiscoveryResults.jsx  GunbotConnect.jsx  ResultsDisplay.jsx  ResultsSkeleton.jsx  ResultsViewer.jsx  Screener.jsx  ScreenerHistory.jsx  ScreenerResultsDisplay.jsx  ScreenerResultsSkeleton.jsx  main.jsx
gunbot_quant/gunbot_api/: client.py  data_processor.py
gunbot_quant/gunbot_strategy_files/: bb_reversion.js  bollinger_band_ride.js  donchian_breakout.js  dynamic_momentum_optimizer.js  emacross.js  grid.js  heikin_ashi_trend.js  keltner_squeeze_breakout.js  macd_cross.js  rsi_reversion.js  rsi_stoch_combo_tp.js  stochastic_reversion.js  supertrend_follower.js  trend_filter_rsi_entry.js
gunbot_quant/strategies/: base_strategy.py  dynamic_momentum_optimizer.py  strategy_library.py
